samples/_failures_safe/1761658570_2fc4b4_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_93f16831.c: In function ‘get_next_token’:
./samples/SAFE/__tmp_93f16831.c:148:9: error: expected identifier at end of input
  148 |         (*column) += strlen(token->
      |         ^
./samples/SAFE/__tmp_93f16831.c:148:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_93f16831.c:148:9: error: expected declaration or statement at end of input
